<resources>
    <string name="app_name">OnTrackBus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="correo">Correo electronico</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_close_sesion">Cerrar Sesion</string>
    <string name="action_help">Ayuda</string>

    <string name="menu_channels">Canales</string>
    <string name="menu_maps">Mapas</string>
    <string name="menu_profile">Mi Perfil</string>
    <string name="app_title">OnTrackBus</string>
    <string name="menu_trusted_contact">Contacto de Confianza</string>
    <string name="menu_daily_activity">Mi Actividad</string>
    <string name="title_activity_search_route">search_route</string>
</resources>