<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_trusted_contact">

    <fragment
        android:id="@+id/nav_channels"
        android:name="com.android.ontrackbus.User_Menu.ui.channels.ChannelsFragment"
        android:label="@string/menu_channels"
        tools:layout="@layout/fragment_channels" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="com.android.ontrackbus.User_Menu.ui.maps.MapsFragment"
        android:label="@string/app_title"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_trusted_contact"
        android:name="com.android.ontrackbus.User_Menu.ui.trusted_contact.TrustedContactFragment"
        android:label="@string/menu_trusted_contact"
        tools:layout="@layout/fragment_trusted_contact" />
    <fragment
        android:id="@+id/nav_daily_activity"
        android:name="com.android.ontrackbus.User_Menu.ui.daily_activity.DailyActivityFragment"
        android:label="@string/menu_daily_activity"
        tools:layout="@layout/fragment_daily_activity" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.android.ontrackbus.User_Menu.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>